[package]
name = "domain-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
anyhow = "1"

version-compare = "0.1.0"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
regex = "1.5.5"
lazy_static = "1.4.0"

serde_json = "1.0.79"
flate2 = "1.0.22"

r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_json = "0.1.1"
diesel_migrations = "1.4.0"