[package]
name = "domain-db"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
long-running-test = []

[dependencies]
cpe = { path = "../cpe" }

serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

thiserror = "2"
version-compare = "0.1.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
regex = "1.9.1"
lazy_static = "1.4.0"
flate2 = "1.0.26"
diesel = { version = "2.2.10", features = ["postgres", "r2d2"] }
diesel_json = "0.2.1"
diesel_migrations = "2.2.0"

[dev-dependencies]
test-case = {workspace = true}