[package]
name = "kepler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain-db = { path = "../domain-db" }

chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.1.5"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
lru = "0.7.3"
lazy_static = "1.4.0"
actix-web = "4.0.1"
actix-cors = "0.6.0"
tracing-log = "0.1.2"
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-actix-web = "0.5.1"
anyhow = "1.0.66"
serde_json = "1.0.79"
