[package]
name = "kepler"
description = "Kepler vulnerability database search engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
domain-db = { path = "../domain-db" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dotenvy = {workspace = true}

clap = { version = "4.3.15", features = ["derive"] }
env_logger = "0.10.0"
lru = "0.11.0"
lazy_static = "1.4.0"
actix-web = "4.3.1"
actix-cors = "0.6.4"
tracing-log = "0.1.3"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17 ", features = ["env-filter"] }
tracing-actix-web = "0.7.5"

config = { version = "0.13.3", default-features = false }

